tests/verifier/fail/test2.ial
function int32 foo()
{
    block entry
    {
        leave;
    }
}
